# art-style-classifier

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  test_config.yaml
art_style_classifier/: api.py  commands.py  config.py
art_style_classifier/data/: dataset.py  download.py  test_download.py
art_style_classifier/utils/: __init__.py  git.py
configs/: main.yaml
configs/data/: default.yaml
configs/logging/: default.yaml
configs/model/: baseline.yaml  default.yaml  efficientnet_b0.yaml
configs/training/: default.yaml
